--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -11,6 +11,7 @@
 @import "setting/grid.scss";
 @import "setting/style.scss";
 @import "setting/layout.scss";
+@import "setting/blog-nav.scss";
 
 // 頁面樣式
 @import "page/index.scss";
